--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,68 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    
-    <string name="app_name" translatable="false">xiao cats</string>
-    <string name="title_fragment_valo">post</string>
-    <string name="title_fragment_task">web</string>
-    <string name="title_fragment_save">main</string>
-    <string name="title_fragment_just">post</string>
-    <string name="title_fragment_fast">settings</string>
-    <string name="action_task_1">Unknown</string>
-    <string name="action_task_2">Changelog</string>
-    <string name="action_task_3">About Us</string>
-    <string name="action_xyn_1">Jump to other page</string>
-    <string name="action_xyn_2">Changelog</string>
-    <string name="action_xyn_3">About Us</string>
-    <string name="activity_root_1">click request root</string>
-    <string name="activity_root_2">60hz</string>
-    <string name="activity_root_3">90hz</string>
-    <string name="activity_root_4">120hz</string>
-    <string name="activity_root_5">144hz</string>
-    <string name="activity_root_6">165hz</string>
-    <string name="activity_root_7">200hz</string>
-    <string name="activity_root_8">Developer testing functionality</string>
-    <string name="activity_root_9">When adjusting the screen brightness, you need to turn off the automatic brightness adjustment function of the system. The minimum adjustment can be -70, and the maximum adjustment can be 255. From small to large, from left to right, this function requires su permission, and it is normal to fail to adjust to a negative value. The device may not support negative value adjustment.</string>
-    <string name="activity_root_10">Click Request notification permission</string>
-    <string name="xyn_add_1">main</string>
-    <string name="xyn_add_2">xiaoneko</string>
-    <string name="update_log_title">Update log</string>
-    <string name="update_log_message">v0.0.10 update log: 1.2. 3.</string>
-    <string name="about_we">about Us</string>
-    <string name="about_we_content">Built and compiled by xiaonekoneko, an application built by xiaonekoneko using ide on the mobile phone. The compilation language used by the program is kotlin language. Obfuscation is turned off, but I don’t know why ide still responds to the problem when building the release version. res performs obfuscation operations, developers will not open source code!</string>
-    <string name="xyn_systems_root_1">Kind tips</string>
-    <string name="xyn_systems_root_2">Developers generally use this dialog box to test some functions. Generally, they cannot be executed, so do not try.</string>
-    <string name="xyn_systems_root_3">implement</string>
-    <string name="xyn_systems_root_4">Cancel</string>
-    <string name="xyn_systems_root_5">Okay! Cat knows it~</string>
-    <string name="xyn_main_root_1">Kind tips</string>
-    <string name="xyn_main_root_2">Meow! From today on, you are Maomao’s little master, and Maomao will always be with you! The cat is so cute! My little master, don’t forget to give Maomao super user rights!</string>
-    <string name="xyn_main_root_3">Young Master, don’t forget to give Meow Meow super user rights!</string>
-    <string name="xyn_main_root_4">Kind tips</string>
-    <string name="xyn_main_root_5">90hz has two options. Selecting shell means that only the shell command will be executed, and the front-end service will not be started. Selecting service means that only the front-end service will be started, and the shell command will not be executed.</string>
-    <string name="xyn_main_root_6">Kind tips</string>
-    <string name="xyn_main_root_7">There are two options for 120hz. Selecting shell means only executing shell commands and will not start the foreground service. Selecting service means only starting the foreground service and will not execute shell commands.</string>
-    <string name="xyn_main_root_8">Kind tips</string>
-    <string name="xyn_main_root_9">144hz has two options. Selecting shell means only executing shell commands and will not start the foreground service. Selecting service means only starting the foreground service and will not execute shell commands.</string>
-    <string name="xyn_main_root_10">Kind tips</string>
-    <string name="xyn_main_root_11">165hz has two options. Selecting shell means that only the shell command will be executed, and the front-end service will not be started. Selecting service means that only the front-end service will be started, and the shell command will not be executed.</string>
-    <string name="xyn_main_root_12">Kind tips</string>
-    <string name="xyn_main_root_13">There are two options for 200hz. Selecting shell means only executing shell commands and will not start the foreground service. Selecting service means only starting the foreground service and will not execute shell commands.</string>
-    <string name="xyn_main_root_14">Kind tips</string>
-    <string name="xyn_main_root_15">Sorry, 60hz only has one option: shell. The dialog box is to prevent accidental clicks.</string>
-    <string name="xyn_c1_1">in development……</string>
-    <string name="xyn_sxl_root_1">screen refresh rate: </string>
-    <string name="xyn_sxl_root_2">Screen Resolution：%1$d × %2$d</string>
-    <string name="xyn_toast_1">WuwuX﹏X execution failed</string>
-    <string name="xyn_toast_2">Great! Execution successful</string>
-    <string name="xyn_toast_3">WuwuX﹏XExecution exception: %s</string>
-    <string name="xyn_toast_4">Execution successful: The current refresh rate has been modified to %1$s Hz</string>
-    <string name="xyn_toast_5">Execution failed: Insufficient app permissions or command line error❌</string>
-    <string name="xyn_refresh_1">Current screen refresh rate: %1$s Hz</string>
-    <string name="xyn_adb_1">cat status：adb</string>
-    <string name="xyn_root_1">cat status：root</string>
-    <string name="xyn_adb_2">cat status：no</string>
-    <string name="fragment_save_1">There is no English translation at present.</string>
-    <string name="fragment_save_2">Click on the authorization file related permissions.</string>
-    <string name="fragment_save_3">Su Shellservice regulations.</string>
+<string name="app_name">exeShell</string>
+<string name="title_fragment_valo">非礼</string>
+<string name="title_fragment_task">日志</string>
+<string name="title_fragment_save">小终端</string>
+<string name="title_fragment_just">交互</string>
+<string name="title_fragment_fast">设置</string>
+<string name="action_task_1">未知</string>
+<string name="action_task_2">更新日志</string>
+<string name="action_task_3">关于我们</string>
+<string name="action_xyn_1">跳转到其他页面</string>
+<string name="action_xyn_2">更新日志</string>
+<string name="action_xyn_3">关于我们</string>
+<string name="activity_root_1">点击请求root权限</string>
+<string name="activity_root_2">60hz</string>
+<string name="activity_root_3">90hz</string>
+<string name="activity_root_4">120hz</string>
+<string name="activity_root_5">144hz</string>
+<string name="activity_root_6">165hz</string>
+<string name="activity_root_7">200hz</string>
+<string name="activity_root_8">开发者测试功能</string>
+<string name="activity_root_9">调整屏幕亮度时，需关闭系统的自动调整亮度功能，最小可调整至-70，最大可调整至255，从小到大，从左到右，该功能需要su权限，调整到负数值失败了也是正常的，设备可能不支持负数值调整</string>
+<string name="activity_root_10">点击请求通知权限</string>
+<string name="xyn_add_1">主活动</string>
+<string name="xyn_add_2">小猫猫</string>
+<string name="update_log_title">更新日志</string>
+<string name="update_log_message">v0.0.10更新日志: 1.2. 3.</string>
+<string name="about_we">关于我们</string>
+<string name="about_we_content">由xiaonekoneko构建编译，xiaonekoneko使用手机上的ide构建的一个应用程序，该程序使用的编译语言为kotlin语言，关闭了混淆了，但不知道为什么在构建release版本时，ide还会对res进行混淆操作，开发者不会开放源代码！</string>
+<string name="xyn_systems_root_1">温馨提示</string>
+<string name="xyn_systems_root_2">开发者一般都会使用此对话框来测试一些功能，一般都无法执行，不要尝试</string>
+<string name="xyn_systems_root_3">执行</string>
+<string name="xyn_systems_root_4">算了</string>
+<string name="xyn_systems_root_5">好的呢！猫猫知道啦~</string>
+<string name="xyn_main_root_1">温馨提示</string>
+<string name="xyn_main_root_2">喵！从今天起您就是猫猫的小少爷了，猫猫会一直陪着小少爷！猫猫超乖啦！我的小少爷可别忘了给猫猫超级用户权限哦！</string>
+<string name="xyn_main_root_3">小少爷可别忘了给喵喵超级用户权限哦！</string>
+<string name="xyn_main_root_4">温馨提示</string>
+<string name="xyn_main_root_5">90hz有两个选项，选择shell代表只执行shell命令，不会启动前台Service，选择Service代表只启动前台Service，不会执行shell命令</string>
+<string name="xyn_main_root_6">温馨提示</string>
+<string name="xyn_main_root_7">120hz有两个选项，选择shell代表只执行shell命令，不会启动前台Service，选择Service代表只启动前台Service，不会执行shell命令</string>
+<string name="xyn_main_root_8">温馨提示</string>
+<string name="xyn_main_root_9">144hz有两个选项，选择shell代表只执行shell命令，不会启动前台Service，选择Service代表只启动前台Service，不会执行shell命令</string>
+<string name="xyn_main_root_10">温馨提示</string>
+<string name="xyn_main_root_11">165hz有两个选项，选择shell代表只执行shell命令，不会启动前台Service，选择Service代表只启动前台Service，不会执行shell命令</string>
+<string name="xyn_main_root_12">温馨提示</string>
+<string name="xyn_main_root_13">200hz有两个选项，选择shell代表只执行shell命令，不会启动前台Service，选择Service代表只启动前台Service，不会执行shell命令</string>
+<string name="xyn_main_root_14">温馨提示</string>
+<string name="xyn_main_root_15">抱歉，60hz只有shell一个选项，对话框是为了防止误点击</string>
+<string name="xyn_c1_1">正在开发中……</string>
+<string name="xyn_sxl_root_1">屏幕刷新率: </string>
+<string name="xyn_sxl_root_2">屏幕分辨率：%1$d × %2$d</string>
+<string name="xyn_toast_1">呜呜X﹏X执行失败</string>
+<string name="xyn_toast_2">好耶！执行成功啦</string>
+<string name="xyn_toast_3">呜呜X﹏X执行异常: %s</string>
+<string name="xyn_toast_4">执行成功：当前刷新率已修改为 %1$s Hz</string>
+<string name="xyn_toast_5">执行失败：app权限不足或者命令行错误❌</string>
+<string name="xyn_refresh_1">当前屏幕刷新率: %1$s Hz</string>
+<string name="xyn_adb_1">猫猫状态：adb</string>
+<string name="xyn_root_1">猫猫状态：root</string>
+<string name="xyn_adb_2">猫猫状态：无权限</string>
+<string name="fragment_save_1">这不是终端，别太离谱，能用就用，用的Android原生exec方法实现的，默认工作目录是/sdcard/目录</string>
+<string name="fragment_save_2">点击授权文件相关权限</string>
+<string name="fragment_save_3">Su Shell使用规则</string>
+
 
 </resources>
