--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<string name="app_name">māo yǔ nǎ</string>
+<string name="app_name">Xshatuocat</string>
 <string name="title_fragment_valo">未知</string>
 <string name="title_fragment_task">未知</string>
 <string name="title_fragment_save">小终端</string>
