--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<string name="app_name">猫猫的小玩物</string>
+<string name="app_name">喵喵小涩猫</string>
 <string name="title_fragment_valo">未知</string>
 <string name="title_fragment_task">未知</string>
 <string name="title_fragment_save">小终端</string>
