--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">OsVersion</string>
-
+    <string name="hello_version">Please do not disclose your device information and system information to others</string>
 </resources>
